Version 1.1.6 - 2023-01-30
================================================================================
fix: Use position ccy for merger transactions
fix: Use position ccy for spinoff transactions
fix: Keep transaction net-value and gross-value null instead of zero if it is not possible to deduct or compute them
fix: Associate ADR fee with symbol and country


Version 1.1.2 - 2023-01-29
================================================================================
fix: Keep transaction-tax null if it is not possible to deduct it from statement data


Version 1.1.1 - 2023-01-27
================================================================================
fix: Don't duplicate transactions if source files contains different optional columns


Version 1.1.0 - 2023-01-27
================================================================================
Add support for iterative processing


Version 1.0.1 - 2023-01-27
================================================================================
Add license header to source files