@@ -581,13 +581,16 @@ public class FiobankBrokerServiceImpl implements FiobankBrokerService {
                     assertNull(nextCcy);
 
                     Position position = ptfmanager.findPosition(ptf, nextSymbol);
+                    Country positionCountry = position.getCountry();
+                    Currency countryCcy = getCcyByCountry(positionCountry);
                     Transaction t1;
                     {
                         assertTrue(RawDirection.SELL.equals(nextDirection));
                         t1 = tranInitializer.apply(TransactionType.INSTRUMENT_CHANGE_PARENT);
                         t1.setNetValue(ZERO);
                         t1.setGrossValue(ZERO);
-                        t1.setCountry(position.getCountry());
+                        t1.setCountry(positionCountry);
+                        t1.setCurrency(countryCcy);
                         t1.setSymbol(nextSymbol);
                         t1.setQty(qty.negate());
                     }
@@ -596,7 +599,8 @@ public class FiobankBrokerServiceImpl implements FiobankBrokerService {
                         Transaction t2 = bunchTranInitializer.apply(TransactionType.INSTRUMENT_CHANGE_CHILD, t1);
                         t2.setNetValue(ZERO);
                         t2.setGrossValue(ZERO);
-                        t2.setCountry(position.getCountry());
+                        t2.setCountry(positionCountry);
+                        t2.setCurrency(countryCcy);
                         t2.setSymbol(symbol);
                         t2.setQty(qty);
                     }
@@ -616,13 +620,17 @@ public class FiobankBrokerServiceImpl implements FiobankBrokerService {
                     assertNull(nextCcy);
 
                     Position position = ptfmanager.findPosition(ptf, symbol);
+                    country = position.getCountry();
+                    Currency countryCcy = getCcyByCountry(country);
+
                     Transaction t1;
                     {
                         assertTrue(RawDirection.SELL.equals(direction));
                         t1 = tranInitializer.apply(TransactionType.INSTRUMENT_CHANGE_PARENT);
                         t1.setNetValue(ZERO);
                         t1.setGrossValue(ZERO);
-                        t1.setCountry(position.getCountry());
+                        t1.setCountry(country);
+                        t1.setCurrency(countryCcy);
                         t1.setSymbol(symbol);
                         t1.setQty(qty.negate());
                     }
@@ -631,7 +639,8 @@ public class FiobankBrokerServiceImpl implements FiobankBrokerService {
                         Transaction t2 = bunchTranInitializer.apply(TransactionType.INSTRUMENT_CHANGE_CHILD, t1);
                         t2.setNetValue(ZERO);
                         t2.setGrossValue(ZERO);
-                        t2.setCountry(position.getCountry());
+                        t2.setCountry(country);
+                        t2.setCurrency(countryCcy);
                         t2.setSymbol(nextSymbol);
                         t2.setQty(qty);
                     }
@@ -698,12 +707,14 @@ public class FiobankBrokerServiceImpl implements FiobankBrokerService {
                         t.setPrice(ZERO);
                     } else {
                         assertNull(country);
+                        assertNull(ccy);
                         country = ptfmanager.findPosition(ptf, symbol).getCountry();
+                        Currency countryCcy = getCcyByCountry(country);
 
                         Transaction t = tranInitializer.apply(TransactionType.LIQUIDATION);
                         t.setCountry(country);
                         t.setSymbol(symbol);
-                        t.setCurrency(ccy);
+                        t.setCurrency(countryCcy);
                         t.setGrossValue(ZERO);
                         t.setNetValue(ZERO);
                         t.setIncome(ZERO);
@@ -759,18 +770,18 @@ public class FiobankBrokerServiceImpl implements FiobankBrokerService {
 
                     assertNull(country);
                     country = ptfmanager.findPosition(ptf, nextSymbol).getCountry();
-                    Currency positionCcy = getCcyByCountry(country);
+                    Currency countryCcy = getCcyByCountry(country);
                     Transaction t1;
                     {
                         t1 = tranInitializer.apply(TransactionType.MERGER_PARENT);
-                        t1.setCurrency(positionCcy);
+                        t1.setCurrency(countryCcy);
                         t1.setCountry(country);
                         t1.setSymbol(nextSymbol);
                         t1.setQty(nextQty.negate());
                     }
                     {
                         Transaction t2 = bunchTranInitializer.apply(TransactionType.MERGER_CHILD, t1);
-                        t2.setCurrency(positionCcy);
+                        t2.setCurrency(countryCcy);
                         t2.setCountry(country);
                         t2.setSymbol(symbol);
                         t2.setQty(qty);
@@ -813,8 +824,10 @@ public class FiobankBrokerServiceImpl implements FiobankBrokerService {
                     }
                 } else if (tranType == TransactionType.SPLIT) {
                     assertNull(country);
+                    assertNull(ccy);
                     Position position = ptfmanager.findPosition(ptf, symbol);
                     country = position.getCountry();
+                    Currency countryCcy = getCcyByCountry(country);
 
                     if (TransactionType.SPLIT.equals(nextTranType) && nextSymbol.equals(symbol)) {
                         assertTrue(direction == RawDirection.SELL);
@@ -829,6 +842,7 @@ public class FiobankBrokerServiceImpl implements FiobankBrokerService {
                     }
                     {
                         Transaction t = tranInitializer.apply(TransactionType.SPLIT);
+                        t.setCurrency(countryCcy);
                         t.setGrossValue(ZERO);
                         t.setNetValue(ZERO);
                         t.setCountry(country);
